# jsonRs

./: .gitignore  .npmrc  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  file_reader.rs  history.rs  json_parser.rs  lib.rs  main.rs  searcher.rs  xml_parser.rs
src/components/: ErrorBoundary.tsx  GoToLineDialog.tsx  Icons.tsx  JsonTreeView.tsx  JsonlViewer.tsx  PasteDialog.tsx  Placeholders.tsx  SearchBar.tsx  SidePanel.tsx  SplitPane.tsx  StatusBar.tsx  TabBar.tsx  TextViewer.tsx  Toolbar.tsx  XmlTreeView.tsx
src/context/: ToastContext.tsx  TooltipContext.tsx
src/hooks/: useClipboardPaste.ts  useFileTabs.ts  useKeyboardShortcuts.ts  useTheme.ts
src/types/: index.ts
src/utils/: format.ts
