[package]
name = "json-rs"
version = "0.1.0"
description = "Lightweight JSON/XML Desktop Viewer"
authors = ["zephyrq-z"]
edition = "2021"

[lib]
name = "json_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.40"
uuid = { version = "1", features = ["v4"] }
regex = "1"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
